New codewars katas

--- a/main.html
+++ b/main.html
@@ -10,7 +10,20 @@
 <script>
 
 
+    // function booleanToString(b){ //Переводим boolean значение в строку
+    //     return b ? "true" : "false"
+    // }
 
+    // function invert(array) { //Создаем массив отрицательных чисел из массива положительных
+    //     let arr = []
+    //     console.log(array[0])
+    //     for (let i = 0; i < array.length; i++) {
+    //         arr.push(-array[i])
+    //     }
+    //     return arr
+    // }
+    // console.log(invert([1,2,3,4,5]))
+    // const invert = array => array.map(num => -num);
 
 // let a = [{stack: ['ya','ti','mi']}];  //Массив с объектом, который содержит массив
 // console.log(a[0].stack[0])
