New codewars katas

--- a/main.html
+++ b/main.html
@@ -13,6 +13,12 @@
     // function booleanToString(b){ //Переводим boolean значение в строку
     //     return b ? "true" : "false"
     // }
+    // function booleanToString(b){
+    //     return b.toString();
+    // }
+    // function booleanToString(b){
+    //     return `${b}`
+    // }
 
     // function invert(array) { //Создаем массив отрицательных чисел из массива положительных
     //     let arr = []
