--- a/src/main.html
+++ b/src/main.html
@@ -9,6 +9,9 @@
 </body>
 <script>
 
+    // const arr = n => Array.from({length: n}, (_, i) => n - i) //Рекурсия через Array.from
+    // console.log(arr(30))
+
     // function booleanToString(b){ //Переводим boolean значение в строку
     //     return b ? "true" : "false"
     // }
