--- a/src/main.html
+++ b/src/main.html
@@ -29,6 +29,19 @@
     // console.log(b())
     // console.log(b())
 
+function  getDivisorsCnt(n){
+    let count = 0;
+    for (let i = 1; i <= Math.sqrt(n); i++) {
+        if (n % i === 0) {
+            count += (i * i === n) ? 1 : 2
+
+        }
+    }
+    return count
+}
+
+    // const doubleChar = (str) => str.split("").map(c => c + c).join(""); //Удвоить количество символов в строке
+
     // function digitize(n) { //Пушит цифры в массив и оставляет их там цифрами
     //     return Array.from(String(n), Number).reverse();
     // }
