--- a/src/main.html
+++ b/src/main.html
@@ -10,24 +10,7 @@
 <script>
 
 
-    // function App() {
-    //     let a = 5;
-    //     function Input() {
-    //         a *= 5
-    //         return a
-    //     }
-    //     return Input
-    // }
-    //
-    // let a = App()
-    // console.log(a())
-    // console.log(a())
-    // console.log(a())
-    //
-    // let b = App()
-    // console.log(b())
-    // console.log(b())
-    // console.log(b())
+
 
 function  getDivisorsCnt(n){
     let count = 0;
@@ -39,6 +22,64 @@ function  getDivisorsCnt(n){
     }
     return count
 }
+
+// function removeEveryOther(arr){ //пушим в массим каждое 2ое значение
+//     return arr.filter(function(elem, index) {
+//         return index % 2 === 0;
+//     });
+// }
+//     function removeEveryOther(arr){
+//         //your code here
+//         let arraY = []
+//         for (let i = 0; i< arr.length; i+=2) {
+//             arraY.push(arr[i])
+//         }
+//         console.log(arraY)
+//     }
+//     removeEveryOther(['Hello', 'Goodbye', 'Hello Again'])
+
+    // function getGrade (s1, s2, s3) { //считам среднее число и выводим результат
+    //     avg = (s1+s2+s3)/3;
+    //     if (avg < 60)  return "F";
+    //     else if (avg < 70) return "D";
+    //     else if (avg < 80) return "C";
+    //     else if (avg < 90) return "B";
+    //     else return "A";
+    // }
+
+    // const points=games=>games.reduce((output,current)=>{ //!!!сравнивает значение в каждом индексе массива и возвращает сумму
+    //     return output += current[0]>current[2] ? 3 : current[0]===current[2] ? 1 : 0;
+    // },0)
+    // function points(games) {
+    //     let count = 0
+    //     for (let i = 0; i < games.length; i++) {
+    //         if (games[i][0] > games[i][2]) {
+    //             count += Number(games[i][0])
+    //         } else if (games[i][0] === games[i][2]) {
+    //             count++
+    //         }
+    //
+    //     }
+    //     console.log(count)
+    //     return count
+    // }
+    // points(["1:0","2:0","3:0","4:0","2:1","1:3","1:4","2:3","2:4","3:4"])
+
+
+    // function greet(name){ //возвращает строку с проверкой на постувщий name
+    //     return "Hello, " + (name == "Johnny" ? "my love" : name) + "!";
+    // }
+
+    // const rps = (p1, p2) => { //Проверка в игре камень-ножницы-бумага
+    //     if (p1 === p2) return "Draw!";
+    //     var rules = {rock: "scissors", paper: "rock", scissors: "paper"};
+    //     if (p2 === rules[p1]) {
+    //         return "Player 1 won!";
+    //     }
+    //     else {
+    //         return "Player 2 won!";
+    //     }
+    // };
 
     // const doubleChar = (str) => str.split("").map(c => c + c).join(""); //Удвоить количество символов в строке
 
