New codewars katas added

--- a/src/main.html
+++ b/src/main.html
@@ -23,6 +23,10 @@ function  getDivisorsCnt(n){
     return count
 }
 
+// function enough(cap, on, wait) { //суммируем значение, а если оно меньше второго параметра, то выведется второй параметр 0
+//     return Math.max(wait + on - cap, 0);
+// }
+
 // function removeEveryOther(arr){ //пушим в массим каждое 2ое значение
 //     return arr.filter(function(elem, index) {
 //         return index % 2 === 0;
