New codewars katas added

--- a/src/main.html
+++ b/src/main.html
@@ -23,6 +23,13 @@ function  getDivisorsCnt(n){
     return count
 }
 
+// function alphabeticalOrder(arr) { //отсортировать массив через функцию
+//     return arr.sort(function(a,b) {
+//         return a === b ? 0 : a>b ? 1: -1
+//     })
+// }
+// alphabeticalOrder(["a", "d", "c", "a", "z", "g"]);
+
 // function enough(cap, on, wait) { //суммируем значение, а если оно меньше второго параметра, то выведется второй параметр 0
 //     return Math.max(wait + on - cap, 0);
 // }
@@ -84,6 +91,12 @@ function  getDivisorsCnt(n){
     //         return "Player 2 won!";
     //     }
     // };
+// const rps = (p1, p2) => { //интересное решение через регулярку
+//     if(p1 === p2) {
+//         return 'Draw!'
+//     };
+//     return `Player ${/rockscissors|scissorspaper|paperrock/.test(p1+p2)? 1 : 2} won!`;
+// }
 
     // const doubleChar = (str) => str.split("").map(c => c + c).join(""); //Удвоить количество символов в строке
 
