New codewars katas added

--- a/src/main.html
+++ b/src/main.html
@@ -20,6 +20,10 @@ function  getDivisorsCnt(n){
     return count
 }
 
+// function twiceAsOld(dadYearsOld, sonYearsOld) { //Math.abs выводит всегда положительное число
+//     return Math.abs(dadYearsOld - sonYearsOld*2)
+// }
+
 // function check(a, x) { //проверяет на наличие в массиве значения
 //     return a.includes(x)
 // }
