--- a/src/main.html
+++ b/src/main.html
@@ -21,13 +21,13 @@ function  getDivisorsCnt(n){
 }
 
 
-function twiceAsOld(dadYearsOld, sonYearsOld) { //Math.abs выводит всегда положительное число
-    return Math.abs(dadYearsOld - sonYearsOld*2)
-}
-
-function check(a, x) { //проверяет на наличие в массиве значения
-    return a.includes(x)
-}
+// function twiceAsOld(dadYearsOld, sonYearsOld) { //Math.abs выводит всегда положительное число
+//     return Math.abs(dadYearsOld - sonYearsOld*2)
+// }
+//
+// function check(a, x) { //проверяет на наличие в массиве значения
+//     return a.includes(x)
+// }
 
 // function index(array, n){ //вернуть число из массива в степени n, или же -1, если такое по длинне оно отсутствует
 //     //your code here
