New codewars katas added

--- a/src/main.html
+++ b/src/main.html
@@ -87,18 +87,18 @@ function fakeBin(x) {
 //     return n.toString().split('').reverse().map(t => +t)
 // }
 
-function add(x) { //пробросить значение глубоко в функцию на 3м вызове и посчтитать
-    return function(y) {
-        return function(z) {
-            return x + y + z
-        }
-    }
-}
-add(10)(20)(30);
-
-function splitify(str) { //разделить массив через регулярку, выбрав только символы
-    return str.split(/\W/)
-}
+// function add(x) { //пробросить значение глубоко в функцию на 3м вызове и посчтитать
+//     return function(y) {
+//         return function(z) {
+//             return x + y + z
+//         }
+//     }
+// }
+// add(10)(20)(30);
+//
+// function splitify(str) { //разделить массив через регулярку, выбрав только символы
+//     return str.split(/\W/)
+// }
 
 // function alphabeticalOrder(arr) { //отсортировать массив через функцию
 //     return arr.sort(function(a,b) {
