--- a/src/main.html
+++ b/src/main.html
@@ -40,31 +40,31 @@ function  getDivisorsCnt(n){
 //     return s.sort()[0].split('').join('***');
 // }
 
-const oddCount = n => Math.floor(n/2) ; //!!! Для задач где просят вывести длинну огромных массивов
-
-switchItUp=n=>["Zero","One","Two","Three","Four","Five","Six","Seven","Eight","Nine"][n] //подход без свитча, а берем нужный индекс со строкой из массива
-function switchItUp(number) { //Switch case для перевода числа в строку
-    switch (number) {
-        case 0: return 'Zero';
-        case 1: return 'One';
-        case 2: return 'Two';
-        case 3: return 'Three';
-        case 4: return 'Four';
-        case 5: return 'Five';
-        case 6: return 'Six';
-        case 7: return 'Seven';
-        case 8: return 'Eight';
-        case 9: return 'Nine';
-    }
-}
-
-function fakeBin(x){ //преобразует строку в массив, цифры больше 5 в 1, другие 0 и объеденяет назад в строку
-    let num = x.toString().split('')
-    return num.map(t => t>4 ? 1 : 0).join('')
-}
-function fakeBin(x) {
-    return x.replace(/\d/g, d => d < 5 ? 0 : 1);
-}
+// const oddCount = n => Math.floor(n/2) ; //!!! Для задач где просят вывести длинну огромных массивов
+//
+// switchItUp=n=>["Zero","One","Two","Three","Four","Five","Six","Seven","Eight","Nine"][n] //подход без свитча, а берем нужный индекс со строкой из массива
+// function switchItUp(number) { //Switch case для перевода числа в строку
+//     switch (number) {
+//         case 0: return 'Zero';
+//         case 1: return 'One';
+//         case 2: return 'Two';
+//         case 3: return 'Three';
+//         case 4: return 'Four';
+//         case 5: return 'Five';
+//         case 6: return 'Six';
+//         case 7: return 'Seven';
+//         case 8: return 'Eight';
+//         case 9: return 'Nine';
+//     }
+// }
+//
+// function fakeBin(x){ //преобразует строку в массив, цифры больше 5 в 1, другие 0 и объеденяет назад в строку
+//     let num = x.toString().split('')
+//     return num.map(t => t>4 ? 1 : 0).join('')
+// }
+// function fakeBin(x) {
+//     return x.replace(/\d/g, d => d < 5 ? 0 : 1);
+// }
 //
 // function paperwork(n, m) { //Умножение с проверкой, что оба числа больше 0
 //     return n > 0 && m > 0 ? n * m : 0
