New js doc file with examples

--- a/src/main.html
+++ b/src/main.html
@@ -20,7 +20,7 @@ function  getDivisorsCnt(n){
     return count
 }
 
-//!!! Сумма всех положительных чисел return (n * (n + 1))/ 2
+!!! Сумма всех положительных чисел return (n * (n + 1))/ 2
 
 // function getBanknoteList(amountOfMoney) {
 //     const banknotes = [1000, 500, 100, 50, 20, 10, 5, 2, 1]
