new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -23,10 +23,15 @@
     let aza55 = new As("h")
     console.log(aza55)
 
+    //globalThis - позволяет обратиться к глобальному объекту вне зависимости от среды, будет работать и под ноду и под виндоу
+
     //Преобразование Symbol к логическуому типу всегда true, к числу - ошибка, к строке только явно через String, иначе ошибка.
     //Если символы закидывать в объект как свойство, то они будут уникальны, даже если значение символа совпадает
 
     //Итератор - это корутина(сопрограмма). Корутина - функция, которая может приостановить работу, запомнить текущее состояние, имеет несколько точек входа и выхода.
+    //Итератор - интерфейс с методом next и признаком done.
+    //Генетарор - подход, когда вычисляется только следующий элемент.
+    //for of - синтаксический сахар для вызова интерфейса итератора
 
     //Связка reduce с async/await. Мы можем использовать и async колбэки в других методах массивов.
     // const numbers = [4, 8, 15, 16, 23, 42]
@@ -116,12 +121,15 @@
     //[[Prototype]] у функции declaration работает только в момент создания,
     // если мы создали новый экземпляр, но добавили что-то позже в прототип, то это не сработает, экземпляр будет ссылаться на тот прототип в момент которого был создан
 
-    //Функция - объект, у которого есть свойства name, length, а так же [[Call]] позволяющую вызывать и [[Scope]] позволяющий создавать область видимости(замыкание), [[Prototype]] - куда мы можем записывать, что хотим
+    //Функция - объект, у которого есть свойства name, length, а так же [[Call]] позволяющую вызывать и [[Scope]] позволяющий создавать область видимости(замыкание), [[Prototype]] - куда мы можем записывать, что хотим, для наследования
 
     //информация о свойствах объект. in - проверит объект и всю цепочку прототипов
     //Object.getOwnPropertyNames - все свойства объект, Object.keys - только перечисляемые свойства, еще есть getOwnPropertySymbols - все символы, getOwnPropertyDescriptors - все дескрипторы.
 
-    //Object.hasOwn - проверяет свойство имеено в объекте, а не в прототипе, лучше чем hasOwnProperty, тк, если создали без прототипа через Object.create, мы не сможем использовать hasOwnProperty
+    //Object.hasOwn - проверяет свойство имеено в объекте, а не в прототипе, лучше чем hasOwnProperty, тк, находится в прототипе объекта и если создали без прототипа через Object.create, мы не сможем использовать hasOwnProperty
+
+    //Object.getOwnPropertyDescriptors([].__proto__)  - посмотреть все дескрипторы массива. Можно посмотреть чего угодно(объект, строка, промис и тд)
+    //Object.getOwnPropertyDescriptors(function.prototype) - для функций
 
     // {} === Object.create(Object.prototype), то что JS делает под копотом
 
@@ -129,8 +137,9 @@
     //у Date есть свой метод для JSON.parse Date.parse,который позволяет сделать из нее объект дата
 
     //адекватная проверна NaN на NaN
-    // Object.is(NaN, NaN)
-    //вместо isNaN, который может строгу приравнять к NaN, тк пытается привести ее к строке, мы получаем сравнение только на NaN
+    //Object.is(NaN, NaN)
+    //Number.isNaN
+    //вместо isNaN, который просто проверяет является ли значение не числом
 
     //Object.create - создание объекта с выставленным прототипом
 
@@ -151,13 +160,27 @@
     }
     Object.prototype.toString.call(apple) //Object apple
 
+    //создать класс можно через new, либо же если вызвать его функцию конструктор
+
+    //В prototype класса нужно записывать методы через точку, чтобы не потерять конструктор,
+    // или же передавать объект целиком в прототип, но нужно тогда указать конструктор и чтобы он ссылался на этот класс
+    // Class.prototype = { getValue: function () {}} - потеря конструктора, неверно
+    // Class.prototype.getValue = function () {} - правильно
+    // Class.prototype = { - добавляем конструктор раз передаем объект
+    //     constructor: Class,
+    //     getValue: function () {}
+    // }
+    //в идеале лучше задавать через Object.defineProperty и задавать enumerable:false, чтобы не было перечисляемым свойством
+
+    //[[Prototype]] - служебная ссылка на prototype, или другими словами __proto__
+    //__proto__ - нестандартное свойство для доступа прямо к [[Prototype]]
     //[[Extensible]]
     //Object.isExtensible - проверяет возможность добавление новых свойств и методов в объект
     //Object.preventExtensions - убрать возможность добавления новый свойств и методов
 
     //делегирование другому генератору, вызов его через yield*
-    //при делегировании результат return вернется в yield*, отработает как то что мы возвращаем {value, а done будет false}
-    // и продолжит работу, а в обычном случае при return, done меняется на true
+    //можно получить значение, что возвращает делегируемый генератор, если записать то, что он вернет в переменную и потом повторном вызвать через yield
+    //если не записывать в переменную то результат потеряется или же будет проигнорирован, как в цикле for of
     // function* apples() {
     //     yield "red"
     //     return "green"
@@ -218,7 +241,7 @@
 
 
     console.log([2] * ['2']) //4
-    console.log(true + false) //1, true приводится к 1, false к 0
+    console.log(true + false) //1, true приводится к 1, false к 0, булевые значения при + приводятся к числам
     console.log('' + 1) //"1"
     console.log(true + []) //"true" string
     console.log({} - []) //NaN, без скобочек -0
@@ -239,9 +262,7 @@
     //мы можем не оборачивать примитив в () чтобы вызвать методы, а поставить просто две точки будет работать
     //просто точка воспринимается движком как десятичная часть числа, две точки или пробел мы даем знать , что ее нет
     console.log(22..toString())
-    console.log(22.
-    toString()
-    )
+    console.log(22 .toString())
 
     const a = {
         age: 2,
@@ -642,6 +663,14 @@
         }
         return count
     }
+
+    //Создать массив значений исходя из массива со значениями от и до
+    //const between = (a, b) => Array.from(new Array(b-a+1), (_, i) => a + i);
+
+    //Проверить на количество глассных
+    // function getCount(str) {
+    //     return (str.match(/[aeiou]/ig)||[]).length;
+    // }
 
     //!!! Сумма всех положительных чисел return (n * (n + 1))/ 2
 
