new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -665,6 +665,12 @@
         }
         return count
     }
+
+   //найти нечетное количество значений в массиве
+   // function findOdd(A) {
+     //   return A.reduce((a,b) => a ^ b)
+   // }
+
 //найти два числа в массиве ints что в сумме дают число s
 //     var sum_pairs=function(ints, s){
 //         var seen = {}
