new codewars task solved

--- a/src/main.html
+++ b/src/main.html
@@ -262,9 +262,7 @@
     //мы можем не оборачивать примитив в () чтобы вызвать методы, а поставить просто две точки будет работать
     //просто точка воспринимается движком как десятичная часть числа, две точки или пробел мы даем знать , что ее нет
     console.log(22..toString())
-    console.log(22.
-    toString()
-    )
+    console.log(22 .toString())
 
     const a = {
         age: 2,
@@ -665,6 +663,11 @@
         }
         return count
     }
+
+//посчитать сумму массиса с вложенными массивам
+    //function stairsIn20(a) {
+    //return 20 * a.reduce((s, a) => s + a.reduce((s, n) => s + n, 0), 0);
+    //}
 
    //найти нечетное количество значений в массиве
    // function findOdd(A) {
